tests/api/model/snapshots/api__model__tests__snapshot_graqphql_query_async@hello.json.snap
---
source: tests/api/model/tests.rs
expression: body_json
input_file: tests/api/model/snapshot_inputs/hello.json
snapshot_kind: text
---
{
  "data": {
    "hello": "Hello everybody!"
  },
  "extensions": {
    "traceId": "[traceId]"
  }
}
